--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -14,6 +14,8 @@
             物料1: <div class="dialogInput"></div>
             <hr>
             物料2: <div class="dialogInput"></div>
+            <hr>
+            物料3: <div id="dialogInput2"></div>
         </div>
     </div>
 </th:block>
@@ -27,8 +29,24 @@
             // placeholder: '请选择物料',
             name: 'material_id',
             reportId: '697147523487240192',
+            value: '696078910634332160',
             labelDisplay: function (row) {
                 return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
+            }
+        })
+
+        $('#dialogInput2').dialogInput({
+            title: '选择物料',
+            placeholder: '请选择物料',
+            name: 'material_id',
+            mode: 'multiple', // 多选
+            reportId: '697147523487240192',
+            value :['696078910634332160', '696545874376949760'],
+            labelDisplay: function (rows) {
+                return rows.map(row => row.name + ' ' + (!row.characteristic ? '' : row.characteristic)).join(", ")
+            },
+            selected: function (rows) {
+                console.log(rows)
             }
         })
     </script>
