--- a/src/main/resources/templates/demos/dialogInput.html
+++ b/src/main/resources/templates/demos/dialogInput.html
@@ -85,12 +85,12 @@
         }
 
         $('#okId').on('click', function () {
-            let row = window.frames["iframe"].document.getElementById('qid').row
-            dialogRowDbClick(row);
+            let rows = window.frames["iframe"].document.getElementById('qid').rows
+            dialogRowDbClick(rows);
         })
 
-        function dialogRowDbClick(row) {
-            if (row.id) {
+        function dialogRowDbClick(rows) {
+            if (!rows.length) {
                 __$modal.modal('hide')
                 document.getElementById('iframe').input.val(row.id)
                 document.getElementById('iframe').label.text(row.name + ' ' + (!row.characteristic ? '' : row.characteristic))
