--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -4,6 +4,7 @@
       xmlns:sp="">
 <head th:replace="includes/base :: common_header(~{},~{::link},~{::style})">
     <link rel="stylesheet" th:href="@{/css/tab-common.css}">
+    <link rel="stylesheet" th:href="@{/css/edit-table.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-datepicker/css/bootstrap-datepicker.min.css}">
     <style>
         .form-control:disabled, .form-control[readonly] {
@@ -18,36 +19,6 @@
             padding: .2rem 1.25rem;
             background: #fff;
             border-top: 1px solid #c8ced3;
-        }
-
-        .table-editor .form-control {
-            padding: 0 .5rem;
-            border: none;
-            border-radius: 0;
-            height: 32px;
-        }
-
-        .table-editor.table-sm th {
-            position: relative;
-            vertical-align: middle;
-            padding-left: .5rem;
-        }
-
-        .table-editor.table-sm label {
-            margin-bottom: 0;
-        }
-
-        .table-editor.table-sm td {
-            padding: 0;
-            vertical-align: middle;
-        }
-
-        .table-editor .required label:before, .table-editor label.required:before {
-            left: 0;
-        }
-
-        .table-editor tr td:first-child, .table-editor tr td:last-child {
-            padding: 0 .3rem;
         }
 
         #form-item .table-fixed-container {
@@ -67,7 +38,7 @@
         }
 
         .form-item .footer span {
-            margin-right: 1rem;
+            margin-right: .5rem;
         }
     </style>
 </head>
@@ -156,7 +127,7 @@
                                     <th style="width: 120px" class="sortable text-right" data-sort-type="number">已收货数量</th>
                                     <th style="width: 120px" class="sortable text-right" data-sort-type="number">待收货数量</th>
                                     <th style="width: 90px" class="sortable">状态</th>
-                                    <th style="width: 120px"></th>
+                                    <th style="width: 120px">物料凭证</th>
                                 </tr>
                                 </thead>
                             </table>
@@ -172,7 +143,7 @@
                                     <td th:text="${#numbers.formatDecimal(s.openQuantity,1,'COMMA',2,'POINT')}" th:data-sort-value="${s.openQuantity}" th:class="text-right"></td>
                                     <td th:class="${'status-' + s.complete}" th:data-sort-value="${s.complete}" th:text="${s.complete == true ? '已完成' : '未完成'}"></td>
                                     <td>
-                                        <a href="javascript:;" th:onclick="openOnNewTab('[(${s.id})]', '[(${\'/reports/699659248728047616?root_reference_code=\'+s.purchaseOrderCode+\'&root_reference_item_id=\'+s.id+\'&material_id=\' + s.materialId})]', '物料凭证')">物料凭证</a>
+                                        <a href="javascript:;" th:onclick="openOnNewTab('[(${s.id})]', '[(${\'/reports/699659248728047616?root_reference_code=\'+s.purchaseOrderCode+\'&root_reference_item_id=\'+s.id+\'&material_id=\' + s.materialId})]', '物料凭证')">详情</a>
                                     </td>
                                 </tr>
                                 </tbody>
@@ -256,7 +227,6 @@
 
         $('#table-container').table({fixedHead: true})
         $('.tr-empty.non-data').remove()
-
 
         var $editableTable = $('#table').editableTable({
             columns: columnConfigs.length + 1,
@@ -519,6 +489,17 @@
                     loadItem(res.itemList)
 
                     toastr.success('订单提交成功！' + res.code);
+
+                    let frameLength = window.parent.frames.length
+
+                    for (let i = 0; i < frameLength; i++) {
+                        // 刷新订单列表
+                        let frame = window.parent.frames[i]
+                        if (frame.location.pathname === '/reports/702566176051462144') {
+                            frame.location.reload()
+                            return
+                        }
+                    }
                 }
             });
         }
