--- a/src/main/resources/templates/sys/auth.html
+++ b/src/main/resources/templates/sys/auth.html
@@ -321,7 +321,7 @@
                             roleInfo: /*[[${roleInfo}]]*/
                         },
                         form: {
-                            roleId:  '[[${roleList[0].id}]]',
+                            roleId:  [[${roleList[0].id}]],
                             userIds: /*[[${userIds}]]*/
                         },
                         form2: {
