--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -117,6 +117,11 @@
                                 <i class="nav-icon icon-list"></i> 物料凭证
                             </a>
                         </li>
+                        <li class="nav-item" sec:authorize="hasAuthority('stock_warning')">
+                            <a class="nav-link" href="javascript:addTab('stock_warning', '库存预警', '/reports/708404920146989056')">
+                                <i class="nav-icon icon-list"></i> 库存预警
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li class="nav-item nav-dropdown" sec:authorize="hasAuthority('sys_management')">
@@ -221,12 +226,12 @@
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
 
-            nthTabs.addTab({
-                id: "dashboard",
-                title: '仪表盘',
-                url: "/dashboard",
-                allowClose: false
-            });
+            // nthTabs.addTab({
+            //     id: "dashboard",
+            //     title: '仪表盘',
+            //     url: "/dashboard",
+            //     allowClose: false
+            // });
 
             // nthTabs.addTab({
             //     id: "inventory_move",
@@ -269,6 +274,13 @@
             //     url: "/reports/702566176051462144",
             //     allowClose: false
             // });
+
+            nthTabs.addTab({
+                id: "stock_warning",
+                title: '库存预警',
+                url: "/reports/708404920146989056",
+                allowClose: false
+            });
         })
     </script>
 </div>
