chore: 物料查询dialog修改样式

--- a/src/main/resources/templates/tpl/query_list.html
+++ b/src/main/resources/templates/tpl/query_list.html
@@ -217,8 +217,9 @@
         }
 
         window[reportDomId + 'RowDbClick'] = function(row, event) {
-            $(event.target.parentElement).siblings().removeClass()
-            event.target.parentElement.className = 'active'
+            $(event.target).parents('tr')
+                .addClass('active')
+                .siblings().removeClass()
 
             window.parent['dialogRowDbClick'] && window.parent['dialogRowDbClick'](row)
         }
